// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render <ScrollPercentage /> 1`] = `
<ScrollPercentage
  tag="div"
  threshold={0}
>
  <InView
    onChange={[Function]}
    threshold={0}
    triggerOnce={false}
  >
    <div>
      <div>
        inner
      </div>
    </div>
  </InView>
</ScrollPercentage>
`;

exports[`Should render <ScrollPercentage /> with custom tag 1`] = `
<ScrollPercentage
  className="wrapperClass"
  tag="span"
  threshold={0}
>
  <InView
    onChange={[Function]}
    threshold={0}
    triggerOnce={false}
  >
    <span
      className="wrapperClass"
    >
      <div>
        inner
      </div>
    </span>
  </InView>
</ScrollPercentage>
`;

exports[`Should render with child 1`] = `
<ScrollPercentage
  tag="div"
  threshold={0}
>
  <InView
    onChange={[Function]}
    threshold={0}
    triggerOnce={false}
  >
    <div>
      <div>
        Inner
      </div>
    </div>
  </InView>
</ScrollPercentage>
`;
